--- a/style.css
+++ b/style.css
@@ -69,7 +69,7 @@ ul, li {
   font-size: 13px;
   background-color: #ffe400;
   font-weight: bold;
-  padding: 2px 10px;
+  padding: 2px 3px;
   border: none;
   border-radius: 12px;
   margin: 0 7px;
@@ -222,12 +222,12 @@ ul, li {
 
 .img-sub-1 {
   top: 8%;
-  left: 22%;
+  left: 13%;
 }
 
 .img-sub-2 {
-  top: 12%;
-  left: 40%;
+  top: 70%;
+  left: 30%;
 }
 
 /* =====  End of Section comment block  ====== */
@@ -248,7 +248,47 @@ ul, li {
   height: 30px;
 }
 
+.login-nav, .offer-nav {
+  display: none;
+}
 
 /*=====  End of FOOTER  ======*/
 
+
+/* =============================================
+=            Media query min-width = 768px            =
+============================================= */
+
+@media (min-width: 768px) {
+
+  .login-nav, .offer-nav {
+    display: initial;
+  }
+
+  .user-nav {
+    display: none;
+    visibility: hidden;
+  }
+
+  .first-sponsor, .second-sponsor {
+    display: none;
+  }
+
+  /* .top-story-more-stories {
+    display: grid;
+    grid-template-columns: 40% 55%;
+    grid-template-areas: 
+    "left right";
+  }
+
+  .top-setory-section {
+    grid-area: right;
+  }
+
+  .feature-stories {
+    grid-area: left;
+  } */
+}
+
+/* =====  End of Media query min-width = 768px  ====== */
 
