added container style to bottom sections

--- a/style.css
+++ b/style.css
@@ -230,7 +230,16 @@ ul, li {
   left: 30%;
 }
 
+
 /* =====  End of Section comment block  ====== */
+
+
+/* =============================================
+=            Section NEWSLETTER            =
+============================================= */
+
+
+/* =====  End of Section NEWSLETTER  ====== */
 
 
 /*=============================================
@@ -238,7 +247,7 @@ ul, li {
 =============================================*/
 
 .subs-btn {
-  font-size: 0.4rem;
+  font-size: 1.2rem;
 }
 
 .subs-btn-2 {
