--- a/style.css
+++ b/style.css
@@ -5,7 +5,8 @@
   font-size: 16px;
 }
 
-ul, li {
+ul,
+li {
   list-style-type: none;
 }
 
@@ -269,22 +270,17 @@ ul, li {
   display: none;
 }
 
-
 .smaller-none {
   display: none;
 }
 
 /* =====  End of FOOTER  ====== */
 
-
-
 /* =============================================
 =            Media query min-width = 768px            =
 ============================================= */
 
 @media (min-width: 768px) {
-
-
   .login-nav,
   .offer-nav {
     display: initial;
@@ -311,10 +307,9 @@ ul, li {
 
 /* =====  End of Media query min-width = 768px  ====== */
 
-
-/*=============================================
+/* =============================================
 =            Media Query min-widh 992px            =
-=============================================*/
+============================================= */
 
 @media (min-width: 992px) {
   .big-show {
@@ -333,8 +328,6 @@ ul, li {
   .big-img-magazine {
     height: 250px;
   }
-
 }
 
-
-/*=====  End of Media Query min-widh 992px  ======*/
+/* =====  End of Media Query min-widh 992px  ====== */
